# midi_ctrl

./: Cargo.toml
src/: gui.rs  main.rs  midi_map.rs
